Remove redundant --enable-sharedlibs

--- a/debian/rules
+++ b/debian/rules
@@ -28,7 +28,7 @@ config.status: configure
 #ifneq "$(wildcard /usr/share/misc/config.guess)" ""
 #	cp -f /usr/share/misc/config.guess config.guess
 #endif
-	./configure $(CROSS) --prefix=/usr --enable-sharedlibs --sysconfdir=/etc --localstatedir=/var/spool \
+	./configure $(CROSS) --prefix=/usr --sysconfdir=/etc --localstatedir=/var/spool \
 	--libexecdir='$${exec_prefix}/lib' --datarootdir=/usr/share --pdfdir=/usr/share/doc/gnuspool CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs"
 
 build: build-stamp
