--- a/debian/rules
+++ b/debian/rules
@@ -2,8 +2,10 @@
 # -*- makefile -*-
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
+# This has to be exported to make some magic below work.
+export DH_OPTIONS
 
 # These are used for cross-compiling and for saving the configure script
 # from having to guess our platform (since we know it already)
@@ -15,52 +17,18 @@ else
 CROSS= --build $(DEB_BUILD_GNU_TYPE)
 endif
 
+%:
+	dh  $@
 
-
-config.status: configure
-	dh_testdir
-# Commented this out as the config.sub and config.guess copied are older
-# than the ones we have
-	# Add here commands to configure the package.
-#ifneq "$(wildcard /usr/share/misc/config.sub)" ""
-#	cp -f /usr/share/misc/config.sub config.sub
-#endif
-#ifneq "$(wildcard /usr/share/misc/config.guess)" ""
-#	cp -f /usr/share/misc/config.guess config.guess
-#endif
+override_dh_auto_configure:
 	./configure $(CROSS) --prefix=/usr --enable-sharedlibs --sysconfdir=/etc --localstatedir=/var/spool \
 	--libexecdir='$${exec_prefix}/lib' --datarootdir=/usr/share --pdfdir=/usr/share/doc/gnuspool CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs"
 
-build: build-stamp
-
-build-stamp:  config.status
-	dh_testdir
-
-	# Add here commands to compile the package.
-	$(MAKE)
-	#docbook-to-man debian/gnuspool.sgml > gnuspool.1
-
-	touch $@
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp
-
-	# Add here commands to clean up after the build process.
-	[ ! -f Makefile ] || $(MAKE) distclean
-	# Remove this
-	# rm -f config.sub config.guess
-
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
+override_dh_installdirs:
 	dh_installdirs -Pdebian/tmp -pgnuspool
+	dh_installdirs -Ngnuspool
 
-	# Add here commands to install the package into debian/tmp.
+override_dh_auto_install:
 	$(MAKE) DESTDIR=$(CURDIR)/debian/tmp SPOOLUSER=root datarootdir=/usr/share STAGED_INSTALL=true install
 
 	# keep lintian quiet about printers directory
@@ -71,41 +39,5 @@ install: build
 	rm -f $(CURDIR)/debian/tmp/usr/lib/libgnuspool_int.la
 	rm -f $(CURDIR)/debian/tmp/usr/lib/libgnuspool_curs.la
 
-
-# Build architecture-independent files here.
-binary-indep: build install
-	:
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs
-	dh_installdocs
-	dh_installexamples
+override_dh_install:
 	dh_install --fail-missing
-#	dh_installmenu
-#	dh_installdebconf
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-#	dh_python
-	dh_installinit
-#	dh_installcron
-#	dh_installinfo
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-#	dh_perl
-	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
