add libraries to libtool to make some library dependencies explicit (more needed)

--- a/src/lib/Makefile.in
+++ b/src/lib/Makefile.in
@@ -32,6 +32,7 @@ CFLAGS		=	$(CCFLAGS) -I$(HDRS) -I$(BASE)
 LIBDIR		=	$(DESTDIR)@libdir@
 LIB		=	libgnuspool_int.la
 LIBCURS		=	libgnuspool_curs.la
+LIBCURSES	=	@LIBCURSES@
 RM		=	rm -f
 INSTALL		=	@INSTALL@
 INSTALL_DATA	=	@INSTALL_DATA@
@@ -64,7 +65,7 @@ LIBCURSOBJS=$(CURSOBJS:.o=.lo)
 
 all:	$(OBJECTS) $(CURSOBJS)
 	libtool --mode=link @CC@ $(CCFLAGS) -o $(LIB) $(LIBOBJECTS) -rpath $(LIBDIR) -version-info 0:0:0
-	libtool --mode=link @CC@ $(CCFLAGS) -o $(LIBCURS) $(LIBCURSOBJS) -rpath $(LIBDIR) -version-info 0:0:0
+	libtool --mode=link @CC@ $(CCFLAGS) -o $(LIBCURS) $(LIBCURSOBJS) $(LIB) $(LIBCURSES) -rpath $(LIBDIR) -version-info 0:0:0
 
 install: all
 	libtool --mode=install $(INSTALL) $(LIB) $(LIBDIR)
