Move dohelp and doerror to curses library to reduce moans from shlibdeps.
Need to fix endhe sometime too but that's a bit caller-dependent being
slightly different in spuser.c and spq.c

--- a/src/lib/Makefile.in
+++ b/src/lib/Makefile.in
@@ -53,7 +53,8 @@ OBJECTS=xfershm.o 	spath.o 	shutilmsg.o	saveopts.o \
 	ncstrncmp.o	helpvec.o	helprdn.o	help_readl.o \
 	mmangle.o	prin_uname.o	prin_gname.o	envprocess.o \
 	strread.o	stringvec.o	stracpy.o	versionprint.o
-CURSOBJS=wnum.o\
+CURSOBJS=dohe.o\
+	 wnum.o\
 	 whexnum.o\
 	 whdrstr.o\
 	 wgets.o\
