Put in changes to relocate /etc stuff to /etc/gnuspool and ptrs directory.
Fix bugs in ptrinstall script.

--- a/cupspy/Makefile.in
+++ b/cupspy/Makefile.in
@@ -37,6 +37,7 @@ cupspy:
 	# Currently don't do anything
 
 install install-strip: all
+	$(INSTALL) -d $(CUPSPYDIR)
 	$(INSTALL) $(MAINPROGS) $(CUPSPYDIR)
 	$(INSTALL_DATA) $(PYMODS) $(CONFIGDATA) $(CUPSPYDIR)
 
