--- a/src/ins/installlpcmds.in
+++ b/src/ins/installlpcmds.in
@@ -18,20 +18,20 @@
 # Turn sqlist output into equivalent of lpq short format output
 #
 
-prefix="@prefix@";
-exec_prefix="@exec_prefix@";
-bindir="@bindir@";
-sbindir="@sbindir@";
-USERNAME="@SPOOLUSER@";
+prefix="@prefix@"
+exec_prefix="@exec_prefix@"
+bindir="@bindir@"
+sbindir="@sbindir@"
+USERNAME="@SPOOLUSER@"
 
-# Create lp and lpstat
+# Don't Create lp and lpstat
 
-ln -s -f $sbindir/gspl-lpcover $bindir/lp
-ln -s -f $sbindir/gspl-lpstatc $bindir/lpstat
+#ln -s -f $sbindir/gspl-lpcover $bindir/lp
+#ln -s -f $sbindir/gspl-lpstatc $bindir/lpstat
 
 # Create cancel
 
-cat <<EOF >$bindir/cancel
+cat <<EOF >gspl-cancel
 #! /bin/sh
 
 exec $bindir/gspl-qdel -y \$*
@@ -39,13 +39,13 @@ EOF
 
 # Create lpr
 
-cat <<'EOF' >$bindir/lpr
+cat <<'EOF' >gspl-lpr
 #! /bin/sh
 
-prefix="@prefix@";
-exec_prefix="@exec_prefix@";
-bindir="@bindir@";
-sbindir="@sbindir@";
+prefix="@prefix@"
+exec_prefix="@exec_prefix@"
+bindir="@bindir@"
+sbindir="@sbindir@"
 
 remq=-q
 copies=1
@@ -84,7 +84,7 @@ EOF
 
 # Create lpq
 
-cat <<'EOF' >$bindir/lpq
+cat <<'EOF' >gspl-lpq
 #! /bin/sh
 
 prinstat() {
@@ -148,10 +148,10 @@ then
 fi
 }
 
-prefix="@prefix@";
-exec_prefix="@exec_prefix@";
-bindir="@bindir@";
-sbindir="@sbindir@";
+prefix="@prefix@"
+exec_prefix="@exec_prefix@"
+bindir="@bindir@"
+sbindir="@sbindir@"
 
 dest=`$bindir/gspl-plist -F %p|sed -e 1q`
 long=
@@ -211,13 +211,13 @@ EOF
 
 # Create lprm
 
-cat <<'EOF' >$bindir/lprm
+cat <<'EOF' >gspl-lprm
 #! /bin/sh
 
-prefix="@prefix@";
-exec_prefix="@exec_prefix@";
-bindir="@bindir@";
-sbindir="@sbindir@";
+prefix="@prefix@"
+exec_prefix="@exec_prefix@"
+bindir="@bindir@"
+sbindir="@sbindir@"
 
 me=`who am i|sed -e 's/^\([^ ]*\).*/\1/'`
 if test -z "$me"
@@ -258,4 +258,4 @@ fi
 exec $bindir/gspl-qdel -y $jobs
 EOF
 
-chmod 755 $bindir/cancel $bindir/lpr $bindir/lpq $bindir/lprm
+chmod 755 gspl-cancel gspl-lpr gspl-lpq gspl-lprm
