--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,8 @@ Package: gnuspool
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: lpr
-Provides: lpr
+Provides: lpr, lprng
+Conflicts: cupsys-client
 Description: A network-based print spooler
  This is a fast, network-enabled and reliable spooling package
  for GNU/Linux and UNIX systems.
