--- a/configure.ac
+++ b/configure.ac
@@ -565,7 +565,8 @@ AC_CONFIG_COMMANDS([src/hdrs/files.h],
 
 AC_OUTPUT(Makefile util/Makefile src/Makefile src/helpmsg/Makefile src/hdrs/infiles.h
 src/lib/Makefile  src/ins/Makefile src/termserv/Makefile src/lpdint/Makefile src/gtk/Makefile
-src/motif/Makefile src/apilib/Makefile src/loccgi/Makefile src/remcgi/Makefile gspl-ptrinstall Netinst Checkuserinst Userinst src/ins/installlpcmds
+src/motif/Makefile src/apilib/Makefile src/loccgi/Makefile src/remcgi/Makefile gspl-ptrinstall gspl-udevpatch
+Netinst Checkuserinst Userinst src/ins/installlpcmds
 STARTUP/Startdirs cupspy/Makefile doc/Makefile ptrinstall/config.py)
 
 AH_TEMPLATE([BROKEN_COMBOBOX], [Define if Motif combo boxes don't work])
