Make udev scripts a separate package gnuspool-udev

--- a/Makefile.in
+++ b/Makefile.in
@@ -35,9 +35,9 @@ DATADIR		=	$(DESTDIR)@pkgdatadir@
 MANDIR		=	$(DESTDIR)@mandir@
 PDFDIR		=	$(DESTDIR)@pdfdir@
 CUPSPYDIR	=	$(DESTDIR)@cupspydir@
+UDEVDIR		=	$(DESTDIR)@datarootdir@/gnuspool-udev
 INSTALL		=	@INSTALL@
 INSTALL_DATA	=	@INSTALL_DATA@
-LIBDIR		=	$(DESTDIR)@libdir@/gnuspool
 STAGED_INSTALL	=	false
 
 all:	buildd build-src
@@ -58,11 +58,14 @@ install: all
 	cd $(UTILDIR);$(MAKE) install
 	cd $(BUILDDIR);$(MAKE) install prefix="$(prefix)" exec_prefix="$(exec_prefix)"
 	cd ptrinstall;$(MAKE)
-	$(INSTALL) gspl-ptrinstall gspl-udevpatch $(SBINDIR)
+	$(INSTALL) gspl-ptrinstall $(SBINDIR)
 	$(INSTALL) pclbanner psbanner $(INTBINDIR)
 	cp -r -p Psetups $(DATADIR)
 	cp -r -p ptrinstall $(DATADIR)
-	cp -r -p udev $(LIBDIR)
+	$(INSTALL) -d -o $(SPOOLUSER) -g root -m 755 $(UDEVDIR)
+	cp -r -p udev/* $(UDEVDIR)
+	$(INSTALL) -d -o $(SPOOLUSER) -g root -m 755 $(UDEVDIR)
+	cp -r -p udev/* $(UDEVDIR)
 	cd doc;$(MAKE) install
 	cd cupspy;$(MAKE) install
 	$(STAGED_INSTALL) || $(BINDIR)/gspl-uchange -R
@@ -72,11 +75,12 @@ install-strip:	all
 	cd $(UTILDIR);make install-strip
 	cd $(BUILDDIR);$(MAKE) install-strip prefix="$(prefix)" exec_prefix="$(exec_prefix)"
 	cd ptrinstall;$(MAKE)
-	$(INSTALL) gspl-ptrinstall gspl-udevpatch $(SBINDIR)
+	$(INSTALL) gspl-ptrinstall $(SBINDIR)
 	$(INSTALL) pclbanner psbanner $(INTBINDIR)
 	cp -r -p Psetups $(DATADIR)
 	cp -r -p ptrinstall $(DATADIR)
-	cp -r -p udev $(LIBDIR)
+	$(INSTALL) -d -o $(SPOOLUSER) -g root -m 755 $(UDEVDIR)
+	cp -r -p udev/* $(UDEVDIR)
 	cd doc;$(MAKE) install-strip
 	cd cupspy;$(MAKE) install-strip
 	$(STAGED_INSTALL) || $(BINDIR)/gspl-uchange -R
