--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: lpr
 Provides: lpr, lprng
-Conflicts: cupsys-client
+Conflicts: cupsys-client, system-config-printer-udev
 Description: A network-based print spooler
  This is a fast, network-enabled and reliable spooling package
  for GNU/Linux and UNIX systems.
@@ -22,13 +22,6 @@ Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Documentation for GNUspool
  PDF documentation for GNUspool
-
-Package: gnuspool-udev
-Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, python (>= 2.5), gnuspool
-Conflicts: system-config-printer-udev
-Description: UDEV scripts for GNUspool
- Python scripts for udev to start/stop USB printers
 
 Package: libgnuspool0
 Architecture: any
