--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -27,8 +27,9 @@ MANDIR		=	$(DESTDIR)@mandir@
 PDFDIR		=	$(DESTDIR)@pdfdir@
 INSTALL		=	@INSTALL@
 INSTALL_DATA	=	@INSTALL_DATA@
-STARTLINKS	=	phalt pstop pinter padd pdell pchange ok nok pstat conn disconn
+STARTLINKS	=	phalt pstop pinter padd pdel pchange ok nok pstat conn disconn
 STOPLINKS	=	suspend release
+LPCOVERLINKS	=	cancel gspl-cancel gspl-lpr gspl-lpstatc lp lpq lpr lprm lpstat
 
 all:  manpages pdfdocs
 
@@ -43,7 +44,7 @@ install install-strip: all
 	$(INSTALL_DATA) poddoc/man/*.3 $(MANDIR)/man3
 	$(INSTALL_DATA) poddoc/man/*.5 $(MANDIR)/man5
 	$(INSTALL_DATA) poddoc/man/*.8 $(MANDIR)/man8
-	cd $(MANDIR)/man1; ln -s gspl-lpcover.1 gspl-lpstatc.1
+	cd $(MANDIR)/man1; for p in $(LPCOVERLINKS); do ln -s gspl-lpcover.1 $$p.1; done
 	cd $(MANDIR)/man1; ln -s gspl-mpr.1 gspl-mrpr.1
 	cd $(MANDIR)/man1; ln -s gspl-pr.1 gspl-rpr.1
 	cd $(MANDIR)/man1; for p in $(STARTLINKS); do ln -s gspl-start.1 gspl-$$p.1; done
