--- a/gspl-ptrinstall.in
+++ b/gspl-ptrinstall.in
@@ -2079,29 +2079,34 @@ check_userpath;
 parse_mconfig;
 
 if (findonpath('python')) {
-    $pyprog = $Config{SDATADIR} . "/ptrinstall/ptrinstall.py";
-    $c = system("python $pyprog");
-    exit 0 if $c == 0;
-    $ec = $c >> 8;
-    if ($ec == 20) {
-	print <<EOT;
+    my $pyversion = `python --version 2>&1`;
+    chop $pyversion;
+    my ($maj,$min);
+    if (($maj,$min) = $pyversion =~ /(\d+)\.(\d+)/ && $maj >= 2 && $min >= 6)  {
+	$pyprog = $Config{SDATADIR} . "/ptrinstall/ptrinstall.py";
+	$c = system("python $pyprog");
+	exit 0 if $c == 0;
+	$ec = $c >> 8;
+	if ($ec == 20) {
+	    print <<EOT;
 You seem to have Python installed but not PyQt4.
 If you install this you should be able to install printers using a GUI interface.
 EOT
-    }
-    elsif ($ec == 21) {
-	print <<EOT;
+	}
+	elsif ($ec == 21) {
+	    print <<EOT;
 You seem to have Python installed and PyQt4 but are missing the
 auto-generated config.py.
 If you install this you should be able to install printers using a GUI interface.
 EOT
-    }
-    else {
-	print <<EOT;
+	}
+	else {
+	    print <<EOT;
 Sorry but the Python interface failed.
 Please try to install it or mend it if it is installed.
 If you install this you should be able to install printers using a GUI interface.
 EOT
+	}
     }
 }
 
