--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: gnuspool
 Section: net
 Priority: optional
 Maintainer: John M Collins <jmc@xisl.com>
+Uploaders: Philip Hands <phil@hands.com>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev, libtool, libgtk2.0-dev, libncurses-dev, flex, bison
 Standards-Version: 3.8.4
 Homepage: http://www.gnu.org/software/gnuspool
