move adduser to postinst, and so no need for pre-depends

--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,7 @@ Homepage: http://www.gnu.org/software/gnuspool
 
 Package: gnuspool
 Architecture: any
-Pre-depends: adduser
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, adduser
 Replaces: lpr
 Provides: lpr, lprng
 Conflicts: cupsys-client, system-config-printer-udev
