--- a/debian/control
+++ b/debian/control
@@ -25,8 +25,9 @@ Description: Documentation for GNUspool
  PDF documentation for GNUspool
 
 Package: libgnuspool0
+Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, gnuspool (= ${binary:Version})
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: API development library for GNUspool
  Consists of the shared API library
 
